# X-Road-catalogue-collector

./: .gitignore  .pylintrc  README.md  catalogue_collector.py  example-config.yaml  openapi-definition.yaml  pyproject.toml  requirements.txt  requirements_dev.txt
systemd/: catalogue-collector.service
xrd_collector/: __init__.py  __main__.py  collector.py  fs_plugin.py  minio_plugin.py  storage.py  util.py
xrdinfo/: pyproject.toml
xrdinfo-src/: pyproject.toml
xrdinfo-src/xrdinfo/: __init__.py
xrdinfo/xrdinfo/: __init__.py
