[build-system]
# Supporting setuptools version used in Ubuntu 22.04
requires = ["setuptools >= 59.6"]
build-backend = "setuptools.build_meta"

[project]
name = "xrd-collector"
version = "1.3.0"
authors = [
    { name="Vitali Stupin", email="vitali.stupin@ria.ee" },
]
description = "X-Road Catalogue Collector"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pyyaml == 6.0.2",
    "requests == 2.32.3",
    "urllib3 == 2.2.3",
    "xrdinfo == 1.3.2"
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[tool.setuptools]
packages = ["xrd_collector"]

[tool.setuptools.package-data]
"xrd_collector" = ["py.typed"]

[project.scripts]
xrd-collector = "xrd_collector.collector:main"

[project.entry-points."xrd_collector.plugin"]
fs = "xrd_collector.fs_plugin:FSPlugin"
minio = "xrd_collector.minio_plugin:MinIOPlugin"

[project.optional-dependencies]
minio = [
    "minio == 7.2.11",
]
dev = [
    "pylint",
    "mypy",
    "types-requests",
    "types-PyYAML"
]
