[build-system]
# Supporting setuptools version used in Ubuntu 22.04
requires = ["setuptools >= 59.6"]
build-backend = "setuptools.build_meta"

[project]
name = "xrdinfo"
version = "1.4.0"
authors = [
    { name="Vitali Stupin", email="vitali.stupin@ria.ee" },
]
description = "X-Road informational module"
dependencies = [
    "pyyaml",
    "requests"
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[tool.setuptools]
packages = ["xrdinfo"]

[tool.setuptools.package-data]
"xrdinfo" = ["py.typed"]

[project.optional-dependencies]
dev = [
    "pylint",
    "mypy",
    "types-requests",
    "types-PyYAML"
]

[tool.mypy]
check_untyped_defs = true
disallow_incomplete_defs = true
disallow_untyped_defs = true
